# Manim_ai

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: deps.py  routes_generate.py  routes_regenerate.py  routes_render.py  routes_status.py  routes_video.py
apps/api/app/core/: config.py  logging.py  security.py
apps/api/app/domain/: enums.py  models.py
apps/api/app/sandbox/: docker_runner.py
apps/api/app/schemas/: generate.py  job.py  render.py
apps/api/app/services/: cache_service.py  code_validator.py  job_service.py  llm_service.py  prompt_builder.py  render_orchestrator.py  render_types.py  storage_service.py
apps/api/app/tests/e2e/: README.md  run_benchmark.py
apps/api/app/tests/integration/: test_generate_route.py  test_render_status_routes.py
apps/api/app/tests/unit/: test_code_validator.py  test_job_service.py  test_llm_service_hf_endpoint.py  test_prompt_builder.py  test_render_feedback_loop.py
apps/api/app/workers/: rq_worker.py  tasks_render.py
apps/web/: package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: CodeEditor.tsx  JobStatusBadge.tsx  PromptForm.tsx  VideoPlayer.tsx
apps/web/src/lib/: api-client.ts  types.ts
containers/renderer/: Dockerfile  entrypoint.sh
docs/: api-contracts.md  architecture.md  golden-prompts.json  runbooks.md  threat-model.md
infra/compose/: compose.dev.yml  compose.prod.yml
infra/nginx/: nginx.conf
infra/systemd/: manim-ai.service
